--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
+    "@babel/polyfill": "^7.12.1",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "axios": "^0.25.0",
+    "core-js": "^3.20.3",
     "vue": "^2.6.11",
     "vuex": "^3.4.0"
   },
@@ -38,9 +41,18 @@
     },
     "rules": {}
   },
-  "browserslist": [
-    "> 1%",
+  "browserslist": {
+    "production": [
+      "> 1%",
     "last 2 versions",
-    "not dead"
-  ]
+    "not dead",
+      "ie 11"
+    ],
+    "development": [
+      "> 1%",
+    "last 2 versions",
+    "not dead",
+      "ie 11"
+    ]
+  }
 }
